--- a/page2/index.css
+++ b/page2/index.css
@@ -16,7 +16,6 @@
 body {
     font-family: 'Roboto', serif;
     background-color: var(--color2);
-    height: 100vh;
     overflow: scroll;
 }
 
@@ -64,7 +63,8 @@ body {
     margin-left: 13px;
     gap: 10px;
     display: grid;
-    grid-template-columns: 54px 104px;
+    grid-template-columns:  min-content min-content;
+    margin-bottom: 474px;
 }
 
 
@@ -92,18 +92,17 @@ dt::after {
     justify-content: center;
     gap: 112px;
     display: flex;
-    margin-top: 492px;
+    position: sticky;
+    bottom: 0;
 }
 
 .footer__left {
-
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .footer__right {
-
     display: flex;
     flex-direction: column;
     align-items: center;
