--- a/page3/index.css
+++ b/page3/index.css
@@ -64,11 +64,10 @@ body {
     border: 1px solid var(--color1);
     border-radius: 8px;
     padding: 14px 15px;
-    font-family: Roboto;
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
- color: var(--color3);
+    color: var(--color3);
 
 }
 
@@ -80,10 +79,10 @@ body {
 }
 
 .form__item_birthday {
+
     background: url(../page3/icons/Calendar.svg) no-repeat right 14px top 50%;
 }
 
-
-input[type="text"]::placeholder {
+input::-webkit-input-placeholder {
     color: var(--color3);
 }
