--- a/page3/index.css
+++ b/page3/index.css
@@ -17,7 +17,7 @@
 body {
     font-family: 'Roboto', serif;
     background-color: var(--color2);
-    overflow: scroll;
+
 }
 
 .container {
@@ -30,9 +30,9 @@ body {
     height: 56px;
     background-color: var(--color1);
     display: flex;
-    align-items: center;
     position: sticky;
     top: 0;
+    align-items: center;
     gap: 12px;
     box-shadow: 0 4px 4px var(--additional-dark-color);
 }
@@ -55,25 +55,47 @@ body {
     row-gap: 40px;
     margin-top: 12px;
     padding: 12px;
+
 }
 
-.form__item {
-    display: flex;
+.form-item {
+    position: relative;
+
+}
+
+.form-input {
+    padding: 14px 15px;
     background-color: var(--color2);
     border: 1px solid var(--color1);
     border-radius: 8px;
-    padding: 14px 15px;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    color: var(--color3);
+    width: calc(100% - 30px);
 
 }
+
+
+.form-label {
+    position: absolute;
+    top: 12px;
+    left: 15px;
+}
+
+
+.form-item .form-input:focus + .form-label,
+.form-item .form-input:not(:placeholder-shown) + .form-label {
+    transform: translate(1px, -20px) scale(1);
+    transition: 0.2s;
+    font-size: 13px;
+    background-color: var(--color2);
+
+
+}
+
 
 .form__item_species {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    width: calc(100%);
     background: url(../page3/icons/arrow.svg) no-repeat right 14px top 50%;
 }
 
@@ -82,6 +104,3 @@ body {
     background: url(../page3/icons/Calendar.svg) no-repeat right 14px top 50%;
 }
 
-input::-webkit-input-placeholder {
-    color: var(--color3);
-}
