--- a/popup-background/index.css
+++ b/popup-background/index.css
@@ -11,22 +11,15 @@
     --fade-cat-color: #970C0C33;
     --additional-dark-color: #A5A5A5;
     --additional-color: #C4C4C4;
-    --black: black;
 }
 
 body {
     font-family: 'Roboto', serif;
-    overflow: scroll;
     background-color: var(--additional-dark-color);
 }
 
-.container {
+wrapper {
     max-width: 768px;
-    margin: 0 auto;
-}
-
-
-.update {
     display: flex;
     flex-direction: column;
     background-color: var(--color2);
@@ -35,40 +28,78 @@ body {
 }
 
 
-.updatetitle {
+.header__title {
     font-size: 24px;
     font-weight: 400;
     line-height: 28px;
-
     border-bottom: 1px solid var(--color1);
+    padding-left: 16px;
+    padding-bottom: 16px;
 }
 
 
-.updateform {
-    padding: 23px 12px;
-    border-bottom: 1px solid var(--color1);
-}
-
-
-
-.updatebutton {
+.form {
     display: flex;
-    justify-content: space-between;
-
-    width: 290px;
-    column-gap: 50px;
-    padding-top: 15px;
-    margin: 0 auto;
+    flex-direction: column;
+    row-gap: 40px;
+    border-bottom: 1px solid var(--color1);
+    padding: 12px;
 }
+
+
+.form-input {
+    padding: 14px 15px;
+    background-color: var(--color2);
+    border: 1px solid var(--color1);
+    border-radius: 8px;
+    width: calc(100% - 30px);
+}
+
+.form__item_weight {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: calc(100%);
+    background: url(../page3/icons/arrow.svg) no-repeat right 14px top 50%;
+}
+
+.form-item {
+    position: relative;
+}
+
+.form-label {
+    position: absolute;
+    top: 12px;
+    left: 15px;
+}
+
+
+.form-item .form-input:focus + .form-label,
+.form-item .form-input:not(:placeholder-shown) + .form-label {
+    transform: translate(1px, -20px) scale(1);
+    transition: 0.2s;
+    font-size: 13px;
+    background-color: var(--color2);
+
+}
+
+.main__button {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+}
+
 .button {
     border-radius: 8px;
     padding: 14px 36px;
 }
-.button_create {
+
+.main__button_create {
     border: none;
     background-color: var(--color1);
 }
-.button_cancel {
+
+.main__button_cancel {
     border: 1px solid var(--color1);
     background-color: var(--color2);
 }
